Added Location details from Maps to MyGames and changed permission request to Maps activity

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -16,6 +16,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        My_API
+        AIzaSyBso5pmXWqNwXrgaQnFsdaQLOqN5pvyIXQ
     </string>
 </resources>
