--- a/app/src/main/res/layout/gridview_layout.xml
+++ b/app/src/main/res/layout/gridview_layout.xml
@@ -1,19 +1,31 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:padding="5dp" >
-    <ImageView
-        android:id="@+id/android_gridview_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp">
-    </ImageView>
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_width="80dp"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
+    card_view:cardCornerRadius="8dp"
+    card_view:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/android_gridview_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:textSize="9sp" >
-    </TextView>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:padding="5dp">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/android_gridview_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+        </ImageView>
+
+        <TextView
+            android:id="@+id/android_gridview_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+        </TextView>
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
