--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -4,10 +4,10 @@
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=0A:2B:3E:60:2E:F6:80:FB:54:0A:B8:CC:0E:20:8C:A4:86:CD:21:10%3Bcom.example.android.mysport
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=0A:2B:3E:60:2E:F6:80:FB:54:0A:B8:CC:0E:20:8C:A4:86:CD:21:10%3Bcom.example.android.wesport
 
     You can also add your credentials to an existing key, using this line:
-    0A:2B:3E:60:2E:F6:80:FB:54:0A:B8:CC:0E:20:8C:A4:86:CD:21:10;wesport
+    0A:2B:3E:60:2E:F6:80:FB:54:0A:B8:CC:0E:20:8C:A4:86:CD:21:10;com.example.android.wesport
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -16,6 +16,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        API_KEY
+        YOUR_KEY_HERE
     </string>
 </resources>
