updated Mainacvitity and MapsActivity

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -16,7 +16,7 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        GOOGLE_MAP_KEY
+        API_KEY
     </string>
 </resources>
 
