--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#7C4DFF</color>
+    <color name="colorTitle">#ffffff</color>
+    </resources>
 
-</resources>
+
