--- a/app/src/main/res/layout/gridview_layout.xml
+++ b/app/src/main/res/layout/gridview_layout.xml
@@ -12,12 +12,10 @@
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:padding="5dp">
-
         <ImageView
             android:id="@+id/android_gridview_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
         </ImageView>
 
         <TextView
@@ -28,4 +26,5 @@
         </TextView>
 
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
