center map on location updates

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -16,7 +16,7 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        google_maps_key
+        AIzaSyCM2iCenU1E93ewX9N7MhwQrxFd2xYbxzE
     </string>
 </resources>
 
