--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -3,5 +3,5 @@
     <item
         android:id="@+id/menu_next"
         app:showAsAction="always"
-        android:title="Next"/>
+        android:title="@string/next"/>
 </menu>
