--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,10 @@
     <dimen name="spacing_normal">8dp</dimen>
     <dimen name="action_button_min_width">56dp</dimen>
     <dimen name="widget_margin">0dp</dimen>
+        <!-- Margin around the floating action button -->
+    <dimen name="fab_margin">16dp</dimen>
 
+    <!-- Common margin value used throughout the app -->
+    <dimen name="activity_margin">16dp</dimen>
 
 </resources>
