detail widget provider updates

--- a/app/src/main/res/layout/widget_detail.xml
+++ b/app/src/main/res/layout/widget_detail.xml
@@ -10,33 +10,37 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/abc_action_bar_default_height_material"
         android:background="@color/colorPrimary">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/app_name"
             android:layout_gravity="center"
+            android:contentDescription="@string/app_name"
             android:src="@drawable/basketball"/>
     </FrameLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/colorPrimaryLight">
+
         <ListView
             android:id="@+id/widget_list"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="match_parent"
             android:divider="@null"
             android:dividerHeight="0dp"
             tools:listitem="@layout/widget_detail_list_item"/>
+
         <TextView
             android:id="@+id/widget_empty"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:gravity="center"
+            android:layout_height="match_parent"
             android:fontFamily="sans-serif-condensed"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:text="@string/empty_game_list"/>
+            android:gravity="center"
+            android:text="@string/empty_game_list"
+            android:textAppearance="?android:textAppearanceLarge"/>
     </FrameLayout>
 
 </LinearLayout>
