--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
             android:layout_gravity="center"
-            android:src="@drawable/basketball"/>
+            android:src="@mipmap/ic_launcher"/>
     </FrameLayout>
     <FrameLayout
         android:layout_width="match_parent"
