--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -50,8 +50,8 @@
 </LinearLayout>
     <ImageView
         android:id="@+id/chatimage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
         android:src="@drawable/ic_chat"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
