--- a/app/src/main/res/menu/maps_menu.xml
+++ b/app/src/main/res/menu/maps_menu.xml
@@ -3,5 +3,5 @@
     <item
         android:id="@+id/map_menu"
         app:showAsAction="always"
-        android:title="Next"/>
+        android:title="@string/next_menu"/>
 </menu>
