--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -24,7 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/ic_empty_game"/>
+            android:src="@drawable/ic_empty_game"
+            android:contentDescription="@string/accessibility_emptygame"/>
 
         <TextView
             android:id="@+id/empty_title_text"
@@ -57,5 +58,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/newgamelogo"/>
+        android:src="@drawable/newgamelogo"
+        tools:ignore="RtlHardcoded"/>
 </RelativeLayout>
