--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -24,14 +24,15 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="2"
-            android:paddingLeft="4dp"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
             android:orientation="vertical">
-        <!-- Name field -->
-        <EditText
-            android:id="@+id/edit_game_name"
-            style="@style/EditorFieldStyle"
-            android:hint="@string/hint_game_name"
-            android:inputType="textCapWords"/>
+            <!-- Name field -->
+            <EditText
+                android:id="@+id/edit_game_name"
+                style="@style/EditorFieldStyle"
+                android:hint="@string/hint_game_name"
+                android:inputType="textCapWords"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -52,12 +53,14 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:orientation="vertical">
-        <EditText
-            android:id="@+id/startdate"
-            style="@style/EditorFieldStyle"
-            android:onClick="onDateClicked"
-            android:layout_width="match_parent"
-            android:focusable="false"/>
+            <EditText
+                android:id="@+id/startdate"
+                style="@style/EditorFieldStyle"
+                android:onClick="onDateClicked"
+                android:layout_width="match_parent"
+                android:focusable="false"
+                android:inputType="text"
+                android:labelFor="@+id/startdate"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -79,15 +82,17 @@
             android:layout_weight="2"
             android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/start_time"
-            android:layout_width="match_parent"
-            style="@style/EditorFieldStyle"
-            android:onClick="stTimePicker"
-            android:focusable="false"/>
+            <EditText
+                android:id="@+id/start_time"
+                android:layout_width="match_parent"
+                style="@style/EditorFieldStyle"
+                android:onClick="stTimePicker"
+                android:focusable="false"
+                android:inputType="text"
+                android:labelFor="@+id/start_time"/>
 
         </LinearLayout>
-        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -105,15 +110,17 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:orientation="vertical">
-        <EditText
-            android:id="@+id/end_time"
-            android:layout_width="match_parent"
-            style="@style/EditorFieldStyle"
-            android:onClick="etTimePicker"
-            android:focusable="false"/>
+            <EditText
+                android:id="@+id/end_time"
+                android:layout_width="match_parent"
+                style="@style/EditorFieldStyle"
+                android:onClick="etTimePicker"
+                android:focusable="false"
+                android:inputType="text"
+                android:labelFor="@+id/end_time"/>
 
-    </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
 
 
     <!-- Skill-->
@@ -134,16 +141,17 @@
             android:layout_weight="2"
             android:orientation="vertical">
 
-        <!-- Skill drop-down spinner -->
-        <Spinner
-            android:id="@+id/spinner_game"
-            android:layout_height="48dp"
-            android:layout_width="wrap_content"
-            android:paddingRight="16dp"
-            android:spinnerMode="dropdown"/>
+            <!-- Skill drop-down spinner -->
+            <Spinner
+                android:id="@+id/spinner_game"
+                android:layout_height="48dp"
+                android:layout_width="wrap_content"
+                android:paddingRight="16dp"
+                android:spinnerMode="dropdown"
+                tools:ignore="RtlHardcoded,RtlSymmetry"/>
 
-    </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
 
     <!-- Notes category -->
 
@@ -164,15 +172,15 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:orientation="vertical">
-        <!-- Notes field -->
-        <EditText
-            android:id="@+id/edit_game_notes"
-            style="@style/EditorFieldStyle"
-            android:hint="@string/hint_game_notes"
-            android:inputType="text"
-            android:selectAllOnFocus="true"/>
+            <!-- Notes field -->
+            <EditText
+                android:id="@+id/edit_game_notes"
+                style="@style/EditorFieldStyle"
+                android:hint="@string/hint_game_notes"
+                android:inputType="text"
+                android:selectAllOnFocus="true"/>
 
-    </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
