--- a/app/src/main/res/layout/gridview_layout.xml
+++ b/app/src/main/res/layout/gridview_layout.xml
@@ -1,6 +1,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="80dp"
     android:layout_height="wrap_content"
@@ -11,11 +12,13 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:padding="5dp">
+                  android:padding="5dp"
+                  tools:ignore="UseCompoundDrawables">
         <ImageView
             android:id="@+id/android_gridview_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/accessibility_grid">
         </ImageView>
 
         <TextView
