--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
@@ -12,6 +13,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="5dip"
         android:textSize="14sp"
-        android:text="Content"/>
+        android:text="Content"
+        tools:ignore="HardcodedText"/>
 
 </RelativeLayout>
