updates to widget intent and strings

--- a/app/src/main/res/layout/gridview_layout.xml
+++ b/app/src/main/res/layout/gridview_layout.xml
@@ -11,20 +11,24 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
+                  android:orientation="vertical"
                   android:padding="5dp"
                   tools:ignore="UseCompoundDrawables">
         <ImageView
             android:id="@+id/android_gridview_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:contentDescription="@string/accessibility_grid">
         </ImageView>
 
         <TextView
             android:id="@+id/android_gridview_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:fontFamily="sans-serif-light">
         </TextView>
 
     </LinearLayout>
