--- a/app/src/main/res/layout/widget_detail.xml
+++ b/app/src/main/res/layout/widget_detail.xml
@@ -9,7 +9,7 @@
         android:id="@+id/widget"
         android:layout_width="match_parent"
         android:layout_height="@dimen/abc_action_bar_default_height_material"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccent"
         tools:ignore="PrivateResource">
 
         <ImageView
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/basketball"/>
+            android:src="@mipmap/ic_launcher"/>
     </FrameLayout>
 
     <FrameLayout
