--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -50,8 +50,9 @@
 </LinearLayout>
     <ImageView
         android:id="@+id/chatimage"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
+        android:layout_marginRight="4dp"
         android:src="@drawable/ic_chat"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
