--- a/app/src/main/res/xml/widgetinfo.xml
+++ b/app/src/main/res/xml/widgetinfo.xml
@@ -3,12 +3,10 @@
                     xmlns:tools="http://schemas.android.com/tools"
                     android:initialKeyguardLayout="@layout/widget_detail"
                     android:initialLayout="@layout/widget_detail"
-                    android:minHeight="@dimen/widget_detail_default_height"
-                    android:minResizeHeight="@dimen/widget_detail_min_resize_height"
-                    android:minResizeWidth="@dimen/widget_detail_min_resize_width"
-                    android:minWidth="@dimen/widget_detail_default_width"
+                    android:minHeight="80dp"
+                    android:minWidth="250dp"
                     android:previewImage="@drawable/ic_chat"
                     android:resizeMode="horizontal|vertical"
-                    android:updatePeriodMillis="0"
+                    android:updatePeriodMillis="100000"
                     android:widgetCategory="home_screen|keyguard"
                     tools:ignore="UnusedAttribute" />
