--- a/app/src/main/res/layout/widget_detail_list_item.xml
+++ b/app/src/main/res/layout/widget_detail_list_item.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
         android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
