--- a/app/src/main/res/drawable/bg_login.xml
+++ b/app/src/main/res/drawable/bg_login.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/splash_image"/>
+<item android:drawable="@drawable/splash_image"/>
+
+<item android:top="160dp">
+    <bitmap
+        android:src="@drawable/splash_logo"
+        android:gravity="top|center_horizontal" />
+</item>
 
 </layer-list>
