--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,6 +6,12 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 tools:context=".MapsActivity">
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -17,6 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </FrameLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,6 +58,8 @@
                 android:layout_height="40dp"
                 />
         </android.support.v7.widget.CardView>
+
+
     </LinearLayout>
 
 </RelativeLayout>
