--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -19,7 +19,6 @@
     </FrameLayout>
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -35,7 +34,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginTop="2dp"
             card_view:cardCornerRadius="4dp">
 
@@ -49,8 +48,8 @@
                 android:id="@+id/autocomplete_fragment"
                 android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                />
+                android:layout_height="40dp"/>
+
         </android.support.v7.widget.CardView>
 
 
