--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,6 +12,7 @@
 -->
 <!-- Layout for a single list item in the list of games -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
 <LinearLayout
@@ -57,5 +58,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:adjustViewBounds="false"
-        android:contentDescription="@string/accessibility_chatbox"/>
+        android:contentDescription="@string/accessibility_chatbox"
+        tools:ignore="RtlHardcoded"/>
     </RelativeLayout>
