--- a/app/src/main/res/layout/custom_info_content.xml
+++ b/app/src/main/res/layout/custom_info_content.xml
@@ -5,11 +5,8 @@
               android:orientation="horizontal">
         <ImageView
             android:layout_width="100dp"
-            android:layout_height="140dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_height="100dp"
             android:contentDescription="@string/accessibility_place"
-            android:focusable="false"
             android:adjustViewBounds="true"
             android:id="@+id/place_image"/>
 
@@ -21,9 +18,21 @@
 
         <TextView
         android:id="@+id/title"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
         android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/snippet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"/>
+        <TextView
+            android:id="@+id/open_now"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"/>
 
     <RatingBar
         android:id="@+id/place_rating"
@@ -32,20 +41,8 @@
         android:rating="0"
         android:isIndicator="false"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/open_now"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/snippet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"/>
     </LinearLayout>
 
 </LinearLayout>
